start of bcl version

--- a/c_code/Makefile
+++ b/c_code/Makefile
@@ -1,6 +1,6 @@
 CC=g++
 MPICC=mpic++
-CFLAGS=-I. -std=c++11 -fopenmp -O3
+CFLAGS=-I. -std=c++11 -O3
 
 BLAS_INC = /usr/local/src/openblas/0.3.12/gcc/Sandy.Bridge/include
 BLAS_LIB = /usr/local/src/openblas/0.3.12/gcc/Sandy.Bridge/lib
@@ -8,7 +8,7 @@ BCL_BACKEND = -DBCL_BACKEND_MPI
 
 LD_FLAGS = $(GASNET_BACKEND_LIB_FLAGS)
 
-all: sim simple sim1d matrix_basic petsc_sim
+all: sim simple sim1d bcl_sim petsc_sim
 
 sim: sim.cpp
 	$(CC) $(CFLAGS) -o sim sim.cpp
@@ -18,6 +18,9 @@ simple: simple_sim.cpp
 
 sim1d: sim_1d.cpp
 	$(CC) $(CFLAGS) -Irandomc -o sim1d sim_1d.cpp
+
+bcl_sim: bcl_sim.cpp
+	$(MPICC) -std=gnu++17 -O3 $(BCL_BACKEND) -I../bcl -I$(BLAS_INC) -L$(BLAS_LIB) -lopenblas -Irandomc -o $@ $<
 
 matrix_basic: matrix_basic.cpp
 	$(MPICC) -std=gnu++17 -O3 $(BCL_BACKEND) -I../bcl -I$(BLAS_INC) -L$(BLAS_LIB) -lopenblas -o $@ $<
