--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "bcl"]
 	path = bcl
-	url = git@github.com:berkeley-container-library/bcl.git
+	url = git@github.com:kodingkoning/bcl.git
