--- a/c_code/Makefile
+++ b/c_code/Makefile
@@ -6,12 +6,15 @@ LD_FLAGS = $(GASNET_BACKEND_LIB_FLAGS)
 GA_INC=-I/home/ekoning2/scratch/ga/install/include
 GA_LINK=-L/home/ekoning2/scratch/ga/build/install/lib -L/home/ekoning2/scratch/ga/build/install/lib64 -lgfortran -lga -lga++ -llapack -lblas -larmci -lblas -lrt -lm
 
-EXEC=mpi_sim sim ga_sim
+EXEC=mpi_sim sim ga_sim wrap_sim
 
 all: $(EXEC)
 
 sim: sim.cpp
 	$(CC) $(CFLAGS) -Irandomc -o sim sim.cpp
+
+wrap_sim: wrap_sim.cpp
+	$(CC) $(CFLAGS) -Irandomc -o $@ $<
 
 mpi_sim: mpi_sim.cpp
 	$(MPICC) -std=gnu++17 -O3 -Irandomc -o $@ $<
