renamed cpp files

--- a/c_code/Makefile
+++ b/c_code/Makefile
@@ -1,26 +1,27 @@
 CC=g++
 MPICC=mpic++
-CFLAGS=-I. -std=c++17 -O3
+CXXOPTS=-I./include
+CFLAGS=-I. -std=c++17 -O3 -Irandomc $(CXXOPTS)
 
 LD_FLAGS = $(GASNET_BACKEND_LIB_FLAGS)
 GA_INC=-I/home/ekoning2/scratch/ga/install/include
 GA_LINK=-L/home/ekoning2/scratch/ga/build/install/lib -L/home/ekoning2/scratch/ga/build/install/lib64 -lgfortran -lga -lga++ -llapack -lblas -larmci -lblas -lrt -lm
 
-EXEC=mpi_sim sim ga_sim wrap_sim
+EXEC=mpi_sim tree_sim ga_sim sim
 
 all: $(EXEC)
 
-sim: sim.cpp
-	$(CC) $(CFLAGS) -Irandomc -o sim sim.cpp
+tree_sim: tree_sim.cpp
+	$(CC) $(CFLAGS) -o $@ $<
 
-wrap_sim: wrap_sim.cpp
-	$(CC) $(CFLAGS) -Irandomc -o $@ $<
+sim: sim.cpp
+	$(CC) $(CFLAGS) -o $@ $<
 
 mpi_sim: mpi_sim.cpp
-	$(MPICC) -std=gnu++17 -O3 -Irandomc -o $@ $<
+	$(MPICC) $(CFLAGS) -o $@ $<
 
 ga_sim: ga_sim.cpp
-	$(MPICC) $(CFLAGS) -O -g $(GA_INC) -Irandomc -DUSE_MPI -DMPI -o $@ $< $(GA_LINK)
+	$(MPICC) $(CFLAGS) -O -g $(GA_INC) -DUSE_MPI -DMPI -o $@ $< $(GA_LINK)
 
 clean:
 	rm -f $(EXEC)
