--- a/c_code/CMakeLists.txt
+++ b/c_code/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required (VERSION 3.18.0 FATAL_ERROR)
 project (stochastic_competition VERSION 1.0.0 LANGUAGES CXX)
 
 find_package (MPI REQUIRED)
+find_package(OpenMP)
 
 set(ENABLE_FORTRAN OFF)
 
@@ -18,8 +19,8 @@ set(CMAKE_CXX_FLAGS_RELEASE "-O3 -std=c++17")
 
 set(targets
     sim
+    omp_sim
     tree_sim
-    mpi_sim
     ga_sim
 )
 
@@ -34,5 +35,6 @@ target_include_directories(ga_sim PUBLIC ${globalarrays_SOURCE_DIR}/global/src)
 target_include_directories(ga_sim PUBLIC ${globalarrays_BINARY_DIR}/ma)
 target_include_directories(ga_sim PUBLIC ${globalarrays_BINARY_DIR}/gaf2c)
 
-target_link_libraries(mpi_sim MPI::MPI_CXX)
 target_link_libraries(ga_sim GlobalArrays::ga MPI::MPI_CXX)
+target_link_libraries(omp_sim PUBLIC OpenMP::OpenMP_CXX)
+
