--- a/c_code/CMakeLists.txt
+++ b/c_code/CMakeLists.txt
@@ -3,6 +3,7 @@ project (stochastic_competition VERSION 1.0.0 LANGUAGES CXX)
 
 find_package (MPI REQUIRED)
 find_package(OpenMP)
+#find_package(UPCXX REQUIRED)
 
 set(ENABLE_FORTRAN OFF)
 
@@ -19,9 +20,7 @@ set(CMAKE_CXX_FLAGS_RELEASE "-O3 -std=c++17")
 set(targets
     sim
     omp_sim
-    tree_sim
     ga_sim
-    test_tree
     benchmark
 )
 
