update makelist, add sbatch

--- a/c_code/CMakeLists.txt
+++ b/c_code/CMakeLists.txt
@@ -22,6 +22,7 @@ set(targets
     omp_sim
     ga_sim
     ga_sim1D
+    ga_sim1D_hydro
     benchmark
     tree_sim
 )
@@ -43,7 +44,14 @@ target_include_directories(ga_sim1D PUBLIC ${globalarrays_SOURCE_DIR}/global/src
 target_include_directories(ga_sim1D PUBLIC ${globalarrays_BINARY_DIR}/ma)
 target_include_directories(ga_sim1D PUBLIC ${globalarrays_BINARY_DIR}/gaf2c)
 
+target_include_directories(ga_sim1D_hydro PUBLIC ${globalarrays_SOURCE_DIR}/ma)
+target_include_directories(ga_sim1D_hydro PUBLIC ${globalarrays_SOURCE_DIR}/ga++/src)
+target_include_directories(ga_sim1D_hydro PUBLIC ${globalarrays_SOURCE_DIR}/global/src)
+target_include_directories(ga_sim1D_hydro PUBLIC ${globalarrays_BINARY_DIR}/ma)
+target_include_directories(ga_sim1D_hydro PUBLIC ${globalarrays_BINARY_DIR}/gaf2c)
+
 target_link_libraries(ga_sim GlobalArrays::ga MPI::MPI_CXX)
 target_link_libraries(ga_sim1D GlobalArrays::ga MPI::MPI_CXX)
+target_link_libraries(ga_sim1D_hydro GlobalArrays::ga MPI::MPI_CXX)
 target_link_libraries(omp_sim PUBLIC OpenMP::OpenMP_CXX)
 
