--- a/c_code/CMakeLists.txt
+++ b/c_code/CMakeLists.txt
@@ -47,6 +47,14 @@ target_include_directories(ga_sim PUBLIC ${globalarrays_BINARY_DIR}/ma)
 target_include_directories(ga_sim PUBLIC ${globalarrays_BINARY_DIR}/gaf2c)
 target_include_directories(ga_sim PUBLIC ${mxx_SOURCE_DIR}/include)
 
+target_include_directories(omp_sim PUBLIC ${globalarrays_SOURCE_DIR}/ma)
+target_include_directories(omp_sim PUBLIC ${globalarrays_SOURCE_DIR}/ga++/src)
+target_include_directories(omp_sim PUBLIC ${globalarrays_SOURCE_DIR}/global/src)
+target_include_directories(omp_sim PUBLIC ${globalarrays_BINARY_DIR}/ma)
+target_include_directories(omp_sim PUBLIC ${globalarrays_BINARY_DIR}/gaf2c)
+target_include_directories(omp_sim PUBLIC ${mxx_SOURCE_DIR}/include)
+
+target_include_directories(ga_sim_no_tree PUBLIC ${globalarrays_SOURCE_DIR}/ma)
 target_include_directories(ga_sim_no_tree PUBLIC ${globalarrays_SOURCE_DIR}/ma)
 target_include_directories(ga_sim_no_tree PUBLIC ${globalarrays_SOURCE_DIR}/ga++/src)
 target_include_directories(ga_sim_no_tree PUBLIC ${globalarrays_SOURCE_DIR}/global/src)
@@ -70,5 +78,5 @@ target_link_libraries(ga_sim GlobalArrays::ga MPI::MPI_CXX Agner)
 target_link_libraries(ga_sim_no_tree GlobalArrays::ga MPI::MPI_CXX Agner)
 target_link_libraries(ga_sim1D GlobalArrays::ga MPI::MPI_CXX)
 target_link_libraries(ga_sim1D_hydro GlobalArrays::ga MPI::MPI_CXX)
-target_link_libraries(omp_sim PUBLIC OpenMP::OpenMP_CXX)
+target_link_libraries(omp_sim GlobalArrays::ga MPI::MPI_CXX Agner OpenMP::OpenMP_CXX)
 
